// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/openapi/openapi Array of integer integer array all options 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": [
          {
            "description": "Array of integers (minItems:1, maxItems:10)",
            "example": [
              4,
              5,
              6,
            ],
            "in": "query",
            "name": "integerList",
            "required": true,
            "schema": {
              "default": [
                1,
                2,
                3,
              ],
              "description": "Array of integers (minItems:1, maxItems:10)",
              "items": {
                "description": "Integer description, age (min:1, max:50)",
                "example": 1,
                "format": "int64",
                "type": "integer",
              },
              "maxItems": 10,
              "minItems": 1,
              "nullable": true,
              "type": "array",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Array of integer integer array minimal options 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": [
          {
            "description": "Parameter without description.",
            "in": "query",
            "name": "integerList",
            "required": false,
            "schema": {
              "description": "Parameter without description.",
              "items": {
                "description": "Parameter without description.",
                "format": "int64",
                "type": "integer",
              },
              "type": "array",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;
